Fixed padding on mobile

--- a/src/molecules/alert/Alert.scss
+++ b/src/molecules/alert/Alert.scss
@@ -1,18 +1,19 @@
 @import '../../../assets/styles/globals';
 
-$alert__padding            : 0 $spacer !default;
-$alert__background-color   : $color-primary !default;
+$alert__padding             : 0 $spacer !default;
+$alert__background-color    : $color-primary !default;
 
-$alert__text-padding       : $spacer $spacer--medium $spacer 64px !default;
-$alert__text-font-size     : $font-size-small !default;
-$alert__text-font-color    : $gray-darker !default;
-$alert__text-font-weight   : $font-weight-bold !default;
-$alert__text-line-height   : $font-line-height !default;
+$alert__text-padding        : $spacer $spacer--medium $spacer 0 !default;
+$alert__text-padding\@medium: $spacer $spacer--medium $spacer 64px !default;
+$alert__text-font-size      : $font-size-small !default;
+$alert__text-font-color     : $gray-darker !default;
+$alert__text-font-weight    : $font-weight-bold !default;
+$alert__text-line-height    : $font-line-height !default;
 
-$alert__button-padding     : 0 $spacer !default;
-$alert__button-icon-color  : $gray-darker !default;
-$alert__button-icon-size   : 18px !default;
-$alert__button-icon-padding: 2px !default;
+$alert__button-padding      : 0 $spacer !default;
+$alert__button-icon-color   : $gray-darker !default;
+$alert__button-icon-size    : 18px !default;
+$alert__button-icon-padding : 2px !default;
 
 .a-alert {
   display: flex;
@@ -32,6 +33,10 @@ $alert__button-icon-padding: 2px !default;
     font-weight: $alert__text-font-weight;
     font-size: $alert__text-font-size;
     line-height: $alert__text-line-height;
+
+    @include mq($screen-m) {
+      padding: $alert__text-padding\@medium;
+    }
   }
 
   &__close {
